--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "socket.io-client": "^4.7.2"
   },
   "scripts": {
-    "test": "mocha tests/**/*.js"
+    "test": "mocha tests/**/*.js",
+    "dev": "node server.js",
+    "start": "node server.js"
   }
 }
